# Book-manager-Qt

./: AbstractModel.h  CMakeCache.txt  CMakeLists.txt  DTO.h  Makefile  Observer.h  README.md  app  books  carti.txt  cmake_install.cmake  domain.cpp  domain.h  gui.h  main.cpp  myExport.csv  rentalcart.cpp  rentalcart.h  repo.cpp  repo.h  service.cpp  service.h  test.cpp  test.h  ui.cpp  ui.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
app_autogen/: deps
app_autogen/EWIEGA46WW/: moc_gui.cpp  moc_gui.cpp.d
